project img and background updated

--- a/test2.html
+++ b/test2.html
@@ -38,9 +38,8 @@
         <!-- Jumbotron -->
         <div class="jumbotron">
             <div class="container">
-                <h1>Katiana Stephens</h1>
-                <h2>Software Developer</h2>
-                <p>Are you ready to take your web and mobile applications to the next level?</p>
+                <h1 class="text-left fadein-fast">Full-Stack Developer</h1>
+                <p class="text-left fadein-fast">Located in Atlanta, GA. Specializing in Java and MEAN stack. If you are a business seeking a web<br>presence or an employer looking to hire, please click below.</p>
                 <br>
                 <p><a class="btn btn-primary btn-lg" href="#" role="button">Hire Me »</a></p>
             </div>
@@ -49,14 +48,30 @@
         <section class="projects">
             <div class="container">
                 <div class="row">
-                        <div class="col-md-6">
-                            <h3>YelpNaturapthic</h3>
-                            <p>Review Site and Locator of local herbal supplements and detox program.</p>
+                    <div class="col-md-6">
+                        <div class="card">
+                            <div class="card-header">
+                                <h3>YelpNaturapthic</h3>
+                            </div>
+                                <img class="card-img-top" src="images/icon.psd" alt="Card image cap">
+                                <div class="card-block">
+                                <p class="card-text">Review Site and Locator of local herbal supplements and detox program.</p>
+                                <a href="#" class="btn btn-primary">Preview </a>
+                            </div>
                         </div>
-                        <div class="col-md-6">
-                            <h3>Pinpoint</h3>
-                            <p>Mobile app to locate grocery stores.</p>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card">
+                            <div class="card-header">
+                                <h3>Pinpoint</h3>
+                            </div>
+                            <img class="card-img-top" src="https://farm8.staticflickr.com/7252/7626464792_3e68c2a6a5.jpg" alt="Card image cap">
+                            <div class="card-block">
+                                <p class="card-text">Mobile app to locate grocery stores.</p>
+                                <a href="#" class="btn btn-primary">Preview </a>
+                            </div>
                         </div>
+                    </div>
                 </div>
             </div>
         </section>
