--- a/test2.html
+++ b/test2.html
@@ -16,6 +16,7 @@
     </head>
     <body>
         <!-- Navigation -->
+        <header>
         <nav class="navbar navbar-inverse navbar-static-top">
             <div class="container">
                 <div class="navbar-header">
@@ -29,26 +30,35 @@
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Projects</a></li>
+                        <li><a href="#top">Home</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#">Contact</a></li>
                         <li><a href="#">GitHub</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
+    </header>
         <!-- Jumbotron -->
-        <div class="jumbotron">
+        <section id="top">
+        <!-- <div class="jumbotron"> -->
             <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <h1 class="text-left fadein-fast">Full-Stack Developer</h1>
                 <p class="text-left fadein-fast">Located in Atlanta, GA. Specializing in Java and MEAN stack. If you are a business seeking a web<br>presence or an employer looking to hire, please click below.</p>
                 <br>
-                <p><a class="btn btn-primary btn-lg" href="#" role="button">Hire Me »</a></p>
+                <p><a class="btn btn-primary btn-lg pull-left" href="#" role="button">Hire Me »</a></p>
             </div>
         </div>
+        </div>
+        <!-- </div> -->
+        </section>
         <!-- Projects -->
-        <section class="projects">
+        <section id="projects">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                         <div class="card">
                             <div class="card-header">
                                 <h3>YelpNaturapthic</h3>
@@ -60,7 +70,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                         <div class="card">
                             <div class="card-header">
                                 <h3>Pinpoint</h3>
@@ -75,14 +85,48 @@
                 </div>
             </div>
         </section>
+        <!-- Contact -->
+        <section id="contact">
+                <div class="row">
+                        <div class="container">
+                            <div class="cf portfolio-item">
+                                <div class="portfolio-col screenshot">
+                                    <img alt=Hal-Con src=img/hal-con.jpg>
+                                </div>
+                                <div class="portfolio-col description-container">
+                                    <h3><a href=http://hal-con.com target=_blank>Hal-Con</a></h3>
+                                    <p class=description>Atlantic Canada's premier sci-fi and gaming convention.</p>
+                                    <ul class=skills><li>Custom Theme Development</li> <li>WordPress</li></ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="separator"></div>
+                    </div>
+                    
+                    <div class="row">
+                        <div class="container">
+                            <div class="cf portfolio-item">
+                                <div class="portfolio-col screenshot">
+                                    <img alt="Lady Slipper Cottages" src=img/ladyslippercottages.jpg>
+                                </div>
+                                <div class="portfolio-col description-container">
+                                    <h3><a href=http://ladyslippercottages.com target=_blank>Lady Slipper Cottages</a></h3>
+                                    <p class=description>Cottage rentals in Lady Slipper, Prince Edward Island.</p>
+                                    <ul class=skills><li>Custom Theme Development</li> <li>WordPress</li></ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
                 <!-- Footer -->
         <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
             <aside class="typer-component">Email Me: <a href="#">kcjstephens@gmail.com</a></aside>
                 <div class="container">
-                        <ul class="social-box">
-                                <li><a class="twitter-icon" href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a class="linkedin-icon" href="#"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>     
+                        <ul class="social-box pull-right">
+                                <li><a class="icon" href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a class="icon" href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a class="icon" href="#"><i class="fa fa-github"></i></a></li>  
+                        </ul>
                 </div>
         </nav>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
