added spacing between cards

--- a/test2.html
+++ b/test2.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Kaushan+Script" rel="stylesheet">
-        <link rel="stylesheet" href="css/test.css">
+        <link rel="stylesheet" href="css/portfolio.css">
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -33,7 +33,6 @@
                         <li><a href="#top">Home</a></li>
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">GitHub</a></li>
                     </ul>
                 </div>
             </div>
@@ -56,34 +55,47 @@
         </section>
         <!-- Projects -->
         <section id="projects">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                        <div class="card">
-                            <div class="card-header">
-                                <h3>YelpNaturapthic</h3>
-                            </div>
-                                <img class="card-img-top" src="images/icon.psd" alt="Card image cap">
-                                <div class="card-block">
-                                <p class="card-text">Review Site and Locator of local herbal supplements and detox program.</p>
-                                <a href="#" class="btn btn-primary">Preview </a>
-                            </div>
-                        </div>
+         <div class="container">
+            <div class="row row-m-t">
+                <div class="col-md-4 col-sm-4">
+                  <div class="card">
+                    <div class="card-block">
+                      <h3 class="card-title">Detoxor</h3>
+                        <img class="card-img-top" src="img/gold.png" alt="Wedbsite display on gold macbook">     
                     </div>
-                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                        <div class="card">
-                            <div class="card-header">
-                                <h3>Pinpoint</h3>
-                            </div>
-                            <img class="card-img-top" src="https://farm8.staticflickr.com/7252/7626464792_3e68c2a6a5.jpg" alt="Card image cap">
-                            <div class="card-block">
-                                <p class="card-text">Mobile app to locate grocery stores.</p>
-                                <a href="#" class="btn btn-primary">Preview </a>
-                            </div>
-                        </div>
-                    </div>
+                  </div>
                 </div>
-            </div>
+                <div class="col-md-8 col-sm-8">
+                  <div class="card">
+                    <div class="card-block">
+                      <p class="card-text description">Review Site and Locator of local herbal supplements and detox program.</p>
+                      <a href="#" class="btn btn-primary">Preview </a>
+                    </div>
+                  </div>
+                </div>
+              </div>  
+        </div>
+                    <div class="container bottom">
+                    <div class="row row-m-t">
+                        <div class="col-md-4 col-sm-4">
+                          <div class="card">
+                            <div class="card-block">
+                              <h3 class="card-title">Pinpoint</h3>
+                                <img class="card-img-top" src="img/gold.png" alt="Wedbsite display on gold macbook">     
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-md-8 col-sm-8">
+                          <div class="card">
+                            <div class="card-block description">
+                              <p class="card-text">Review Site and Locator of local herbal supplements and detox program.</p>
+                              <a href="#" class="btn btn-primary">Preview </a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                   
+                </div>
         </section>
         <!-- Contact -->
         <section id="contact">
