fix spacing, size, line height of text in #projects

--- a/test2.html
+++ b/test2.html
@@ -68,7 +68,7 @@
                 <div class="col-md-8 col-sm-8">
                   <div class="card">
                     <div class="card-block">
-                      <p class="card-text description">Review Site and Locator of local herbal supplements and detox program.</p>
+                      <p class="card-text description">Review site and directory of local herbal supplement<br>suppliers and detox programs.</p>
                       <a href="#" class="btn btn-primary">Preview </a>
                     </div>
                   </div>
@@ -88,7 +88,7 @@
                         <div class="col-md-8 col-sm-8">
                           <div class="card">
                             <div class="card-block description">
-                              <p class="card-text">Review Site and Locator of local herbal supplements and detox program.</p>
+                              <p class="card-text">Mobile app to track grocery stores<br>and personal shopping list.</p>
                               <a href="#" class="btn btn-primary">Preview </a>
                             </div>
                           </div>
