--- a/test2.html
+++ b/test2.html
@@ -17,7 +17,7 @@
     <body>
         <!-- Navigation -->
         <header>
-        <nav class="navbar navbar-inverse navbar-static-top">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -47,7 +47,7 @@
                 <h1 class="text-left fadein-fast">Full-Stack Developer</h1>
                 <p class="text-left fadein-fast">Located in Atlanta, GA. Specializing in Java and MEAN stack. If you are a business seeking a web<br>presence or an employer looking to hire, please click below.</p>
                 <br>
-                <p><a class="btn btn-primary btn-lg pull-left" href="#" role="button">Hire Me »</a></p>
+                <p><a id="hire" class="btn btn-primary btn-lg pull-left" href="#" role="button">Hire Me »</a></p>
             </div>
         </div>
         </div>
@@ -75,7 +75,8 @@
                 </div>
               </div>  
         </div>
-                    <div class="container bottom">
+        <hr>
+                    <div class="container">
                     <div class="row row-m-t">
                         <div class="col-md-4 col-sm-4">
                           <div class="card">
@@ -98,40 +99,28 @@
                 </div>
         </section>
         <!-- Contact -->
-        <section id="contact">
-                <div class="row">
-                        <div class="container">
-                            <div class="cf portfolio-item">
-                                <div class="portfolio-col screenshot">
-                                    <img alt=Hal-Con src=img/hal-con.jpg>
-                                </div>
-                                <div class="portfolio-col description-container">
-                                    <h3><a href=http://hal-con.com target=_blank>Hal-Con</a></h3>
-                                    <p class=description>Atlantic Canada's premier sci-fi and gaming convention.</p>
-                                    <ul class=skills><li>Custom Theme Development</li> <li>WordPress</li></ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="separator"></div>
-                    </div>
-                    
+        <div class="section" id="contact">
+  		<div class="container">
+                <h2 class="white"> Contact me </h2>
+                <form id="contact-us" method="post" action="contact.php">
                     <div class="row">
-                        <div class="container">
-                            <div class="cf portfolio-item">
-                                <div class="portfolio-col screenshot">
-                                    <img alt="Lady Slipper Cottages" src=img/ladyslippercottages.jpg>
-                                </div>
-                                <div class="portfolio-col description-container">
-                                    <h3><a href=http://ladyslippercottages.com target=_blank>Lady Slipper Cottages</a></h3>
-                                    <p class=description>Cottage rentals in Lady Slipper, Prince Edward Island.</p>
-                                    <ul class=skills><li>Custom Theme Development</li> <li>WordPress</li></ul>
-                                </div>
-                            </div>
+                        <div class="col-sm-6 wow animated fadeInLeft">
+                            <input type="text" name="name" id="name" required="required" class="form" placeholder="Name" />
+                            <input type="email" name="email" id="email" required="required" class="form" placeholder="Email" />
+                            <input type="text" name="subject" id="subject" required="required" class="form" placeholder="Subject" />
+                        </div>
+                        <div class="col-sm-6 wow animated fadeInRight">
+                            <textarea name="message" id="message" class="form textarea"  placeholder="Message"></textarea>
                         </div>
                     </div>
-                    
+                    <div class="text-center">
+                        <button type="submit" id="submit" name="submit" class="form-btn semibold">Send Message</button>
+                    </div>
+                </form>
+            </div>
+        </div>
                 <!-- Footer -->
-        <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+        <!-- <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
             <aside class="typer-component">Email Me: <a href="#">kcjstephens@gmail.com</a></aside>
                 <div class="container">
                         <ul class="social-box pull-right">
@@ -140,7 +129,7 @@
                                 <li><a class="icon" href="#"><i class="fa fa-github"></i></a></li>  
                         </ul>
                 </div>
-        </nav>
+        </nav> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
