--- a/test2.html
+++ b/test2.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Katiana Stephens | Atlanta, GA</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Kaushan+Script" rel="stylesheet">
+        <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css">
+        <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Merriweather|Montserrat" rel="stylesheet">
         <link rel="stylesheet" href="css/portfolio.css">
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -30,9 +30,12 @@
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#top">Home</a></li>
-                        <li><a href="#projects">Projects</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li class="nav-item active">
+                            <a class="nav-link scroll" href="#top">Home</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link scroll" href="#projects">Projects</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link scroll" href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -47,7 +50,7 @@
                 <h1 class="text-left fadein-fast">Full-Stack Developer</h1>
                 <p class="text-left fadein-fast">Located in Atlanta, GA. Specializing in Java and MEAN stack. If you are a business seeking a web<br>presence or an employer looking to hire, please click below.</p>
                 <br>
-                <p><a id="hire" class="btn btn-primary btn-lg pull-left" href="#" role="button">Hire Me »</a></p>
+                <p><a id="hire" class="btn btn-primary btn-lg pull-left" href="#contact" role="button">Hire Me »</a></p>
             </div>
         </div>
         </div>
@@ -104,33 +107,39 @@
                 <h2 class="white"> Contact me </h2>
                 <form id="contact-us" method="post" action="contact.php">
                     <div class="row">
-                        <div class="col-sm-6 wow animated fadeInLeft">
+                        <div class="col-sm-6 col-md-6 wow animated fadeInLeft">
                             <input type="text" name="name" id="name" required="required" class="form" placeholder="Name" />
                             <input type="email" name="email" id="email" required="required" class="form" placeholder="Email" />
                             <input type="text" name="subject" id="subject" required="required" class="form" placeholder="Subject" />
                         </div>
-                        <div class="col-sm-6 wow animated fadeInRight">
+                        <div class="col-sm-6 col-md-6 wow animated fadeInRight">
                             <textarea name="message" id="message" class="form textarea"  placeholder="Message"></textarea>
                         </div>
                     </div>
                     <div class="text-center">
-                        <button type="submit" id="submit" name="submit" class="form-btn semibold">Send Message</button>
+                        <button type="submit" id="submit" name="submit" class="btn btn-primary">Send Message</button>
                     </div>
                 </form>
             </div>
         </div>
                 <!-- Footer -->
-        <!-- <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-            <aside class="typer-component">Email Me: <a href="#">kcjstephens@gmail.com</a></aside>
+        <footer>
+        <nav class="navbar navbar-default navbar-static-bottom" role="navigation">
                 <div class="container">
-                        <ul class="social-box pull-right">
-                                <li><a class="icon" href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a class="icon" href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a class="icon" href="#"><i class="fa fa-github"></i></a></li>  
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <ul class="social-box">
+                                <li><a class="icon" href="https://twitter.com/HiiKatt"><i class="fa fa-twitter"></i></a></li>
+                                <li><a class="icon" href="https://github.com/kat89"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a class="icon" href="https://linkedin.com/in/katiana-stephens"><i class="fa fa-github"></i></a></li>  
                         </ul>
                 </div>
-        </nav> -->
+            </div>
+        </div>
+        </nav>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
     </body>
 </html>
